<resources>
    <string name="app_name">CellsGroup</string>
    <string name="nav_header_title" translatable="true">Sua Igreja em Células</string>
    <string name="nav_header_subtitle">email@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings" translatable="true">Configurações</string>
    <string name="asteriskred"><font color='#cc0029'>*</font></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_celulas" translatable="true">Células</string>
    <string name="title_activity_add_celula" translatable="true">Nova Célula</string>
    <string name="title_activity_comunicados" translatable="true">Comunicados</string>
    <string name="title_activity_intercessao" translatable="true">Intercessão</string>
    <string name="title_activity_agenda" translatable="true">Agenda</string>
    <string name="title_activity_contato" translatable="true">Contato</string>
    <string name="title_activity_visao" translatable="true">Visão</string>
    <string name="title_activity_compartilhar" translatable="true">Compartilhar</string>
    <string name="title_activity_enviar" translatable="true">Enviar</string>
    <string name="title_activity_relatorio">Relatório</string>
    <string name="title_activity_splash_screen">activity_splash_screen</string>
    <string name="add" translatable="true">Adicionar</string>
    <string name="textGrid" translatable="true">0dp</string>
    <string name="comunicados" translatable="true">Comunicados</string>
    <string name="btnSend" translatable="true">Enviar</string>
    <string name="btnCancel" translatable="true">Cancelar</string>
    <string name="action_login" translatable="true">Login</string>
    <string name="nome" translatable="true">Nome</string>
    <string name="email" translatable="true">Email</string>
    <string name="enviar" translatable="true">Enviar</string>
    <string name="cancelar" translatable="true">Cancelar</string>
    <string name="title_activity_login" translatable="true">Entre</string>
    <string name="prompt_email" translatable="true">Email</string>
    <string name="prompt_password" translatable="true">Senha</string>
    <string name="action_sign_in" translatable="true">Entre</string>
    <string name="action_sign_in_short" translatable="true">Muito curto</string>
    <string name="welcome" translatable="true">"Bem vindo !"</string>
    <string name="invalid_username" translatable="true">Não é um usuário válido</string>
    <string name="invalid_password" translatable="true">Senha precisa ser  > 5 characteres</string>
    <string name="login_failed" translatable="true">"Falha no login"</string>
    <string name="senha" translatable="true">Senha</string>
    <string name="registrar" translatable="true">Registrar</string>
    <string name="celula" translatable="true">Célula</string>
    <string name="lider" translatable="true">Líder</string>
    <string name="celula1" translatable="true">Célula</string>
    <string name="rede1" translatable="true">Rede</string>
    <string name="supervisor1" translatable="true">Supervisor</string>
    <string name="lider1" translatable="true">Líder</string>
    <string name="anfitriao1" translatable="true">Anfitrião</string>
    <string name="vice_lider1" translatable="true">Vice-líder</string>
    <string name="secretario1" translatable="true">Secretário</string>
    <string name="colaborador1" translatable="true">Colaborador</string>
    <string name="dia_da_semana1" translatable="true">Dia da emana</string>
    <string name="horario1" translatable="true">Horário</string>
    <string name="base_celula1" translatable="true">Base célula</string>
    <string name="membros_igr" translatable="true">Membros da igreja</string>
    <string name="convidados1" translatable="true">Convidados</string>
    <string name="criancas1" translatable="true">Crianças</string>
    <string name="total1" translatable="true">Total</string>
    <string name="houve_estudo1" translatable="true">Houve estudo ?</string>
    <string name="houve_quebra_gelo1" translatable="true">Houve quebra-gelo ?</string>
    <string name="teve_lanche1" translatable="true">Teve lanche ?</string>
    <string name="algu_m_aceitou_jesus1" translatable="true">Alguém aceitou Jesus ?</string>
    <string name="reconciliacao1" translatable="true">Reconciliação ?</string>
    <string name="houve_testemunho1" translatable="true">Houve testemunho ?</string>
    <string name="sim" translatable="true">Sim</string>
    <string name="nao" translatable="true">Não</string>
    <string name="houve_estudo" translatable="true">Houve estudo ?</string>
    <string name="foi_ministrado_o_estudo" translatable="true"><u>Foi ministrado o estudo ?</u></string>
    <string name="foi_realizado_o_quebra_gelo" translatable="true">Foi realizado o quebra gelo ?</string>
    <string name="algu_m_se_reconcilhou_com_cristo" translatable="true">Alguém se reconcilhou com Cristo ?</string>
    <string name="algu_m_contou_testemunho" translatable="true">Alguém contou testemunho ?</string>
    <string name="foi_servido_lanche" translatable="true">Foi servido lanche ?</string>
    <string name="algu_m_aceitou_jesus_como_seu_salvador" translatable="true">Alguém aceitou Jesus como seu salvador ?</string>
    <string name="rede" translatable="true">Rede</string>
    <string name="supervisor" translatable="true">Supervisor</string>
    <string name="vice_lider" translatable="true">Vice-lider</string>
    <string name="anfitriao" translatable="true">Anfitrião</string>
    <string name="colaborador" translatable="true">Colaborador</string>
    <string name="secretario" translatable="true">Secretário</string>
    <string name="hora" translatable="true">hora:</string>
    <string name="dataInicio" translatable="true">Data início</string>
    <string name="action_save" translatable="true">Salvar</string>
    <string name="action_cancel" translatable="true">Cancelar</string>
    <string name="action_edit" translatable="true">Editar</string>
    <string name="action_delete" translatable="true">Apagar</string>
    <string name="action_settings_edit_celula" translatable="true">Configurações</string>
    <string name="title_activity_edit_celula" translatable="true">Editar Célula</string>
    <string name="title_activity_read_relatorio" translatable="true">Relatório</string>
    <string name="apagar_a_c_lula" translatable="true">APAGAR A CÉLULA ?</string>
    <string name="apagar_c_lula" translatable="true">Apagar Célula</string>
    <string name="title_activity_relatorio_view" translatable="true">Relatórios</string>
    <string name="title_activity_read_celula" translatable="true">Células</string>
    <string name="batismo" translatable="true">Batismo</string>
    <string name="title_activity_add_relatorio" translatable="true">Adiciona Relatório</string>
    <string name="title_activity_delete_celula" translatable="true">Apaga Célula</string>
    <string name="Bem_Vindo" translatable="true">Bem Vindo :</string>
    <string name="title_activity_configuracao" translatable="true">Configuração</string>
    <string name="igreja" translatable="true">Igreja</string>
    <string name="endere_o" translatable="true">Endereço</string>
    <string name="bairro" translatable="true">Bairro</string>
    <string name="cidade" translatable="true">Cidade</string>
    <string name="estado" translatable="true">Estado</string>
    <string name="pa_s" translatable="true">País</string>
    <string name="login" translatable="true">Login</string>
    <string name="Email_erro" translatable="true">Email inválido </string>
    <string name="Senha_vazia" translatable="true">Falta colocar a senha</string>
    <string name="obrigatorio" translatable="true">Obrigatório</string>
    <string name="obrigatorio_email_valid" translatable="true">Obrigatório e-mail válido</string>
    <string name="obrigatorio_maior_5" translatable="true">Obrigatório com +5 dígitos</string>
    <string name="registrando" translatable="true">Realizando o registro…</string>
    <string name="iniciando_login" translatable="true">Iniciando Login…</string>
    <string name="registro_existe" translatable="true">Esse registro já existe.</string>
    <string name="usuario_existe" translatable="true">Usuário já logado</string>
    <string name="Falha_registro" translatable="true">Falha ao registrar usuário</string>
    <string name="Registro_sucesso" translatable="true">Usuário registrado com sucesso.</string>
    <string name="logado_sucesso" translatable="true">Login logado com sucesso.</string>
    <string name="falha_login" translatable="true">Usuário ou senha incorretos. Já é registrado?</string>
    <string name="action_logout" translatable="true">logout</string>
    <string name="Logout_sucesso" translatable="true">Logout realizado com sucesso.</string>
    <string name="title_activity_add_igreja" translatable="true">Nova igreja</string>
    <string name="title_activity_add_usuario" translatable="true">Novo usuário</string>
    <string name="action_addIgreja" translatable="true">Nova Igreja</string>
    <string name="action_addUsuario" translatable="true">Novo usuário</string>
    <string name="title_activity_add_intercessaoa" translatable="true">Nova intercessão</string>
    <string name="title_activity_add_agenda" translatable="true">Nova agenda</string>
    <string name="configura_o" translatable="true">configuração</string>
    <string name="cep" translatable="true">Cep</string>
    <string name="title_activity_conexao" translatable="true">Conexão</string>
    <string name="c_lulas" translatable="true">Células</string>
    <string name="relat_rios" translatable="true">Relatórios</string>
    <string name="data" translatable="true">Data:</string>
    <string name="motivo" translatable="true">Motivo:</string>
    <string name="fileNotFound" translatable="true">Arquivo: não encontrado !</string>
    <string name="salvar" translatable="true">Salvar</string>
    <string name="telefone_required">(DDD) + celular*</string>
    <string name="data_de_nascimento_required" translatable="true">Data de Nascimento*</string>
    <string name="data_de_batismo" translatable="true">Data de Batismo</string>
    <string name="nome_do_pai" translatable="true">Nome do Pai</string>
    <string name="nome_da_m_e" translatable="true">Nome da Mãe</string>
    <string name="estado_civil" translatable="true">Estado Civil</string>
    <string name="sexo" translatable="true">Sexo</string>
    <string name="idade" translatable="true">Idade</string>
    <string name="nome_required" translatable="true">Nome*</string>
    <string name="email_required" translatable="true">Email*</string>
    <string name="cargo_igreja" translatable="true">Cargo Igreja*</string>
    <string name="grupo_padr_o" translatable="true">Grupo Padrão</string>
    <string name="Intersession" translatable="true">Intercessão</string>
    <string name="Schedule" translatable="true">Horário</string>
    <string name="Home" translatable="true">Início</string>
    <string name="Cells" translatable="true">Células</string>
    <string name="Communication" translatable="true">Comunicação</string>
    <string name="Contact" translatable="true">Contato</string>
    <string name="Share" translatable="true">Compartilhar</string>
    <string name="Send" translatable="true">Enviar</string>
    <string name="lideres" translatable="true">Lideres</string>
    <string name="adiciona_l_der" translatable="true">Adicionar Líder</string>
    <string name="ddi_req" translatable="true">DDI*</string>
    <string name="Relatorio" translatable="true">Relatório</string>
    <string name="deus_bom" translatable="true">Deus é bom!</string>
    <string name="action_Sair" translatable="true">Sair</string>
    <string name="desconectar" translatable="true">Desconectar</string>
    <string name="_55">+55</string>
</resources>