<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24_green"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_cells"
            android:icon="@drawable/ic_baseline_groups_24_green"
            android:title="@string/Cells" />

        <item
            android:id="@+id/nav_leader"
            android:icon="@drawable/ic_baseline_engineering_24_green"
            android:title="@string/lideres" />

        <item
            android:id="@+id/nav_realatorio"
            android:icon="@drawable/ic_baseline_menu_book_24_green"
            android:title="@string/Relatorio" />

        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_local_phone_24_green"
            android:title="@string/Contact" />

        <item
            android:id="@+id/nav_intersession"
            android:enabled="false"
            android:icon="@drawable/ic_baseline_sports_kabaddi_24_green"
            android:visible="false"
            android:title="@string/Intersession" />
        <item
            android:id="@+id/nav_schedule"
            android:enabled="false"
            android:icon="@drawable/ic_baseline_access_time_24_green"
            android:visible="false"
            android:title="@string/Schedule" />
        <item
            android:id="@+id/nav_communication"
            android:enabled="false"
            android:icon="@drawable/ic_baseline_record_voice_over_24_green"
            android:visible="false"
            android:title="@string/Communication" />

    </group>

    <item android:title="@string/comunicados" android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Send" />
        </menu>
    </item>

</menu>
