<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
         android:id="@+id/action_addIgreja"
         android:orderInCategory="100"
         android:title="@string/action_addIgreja"
         app:showAsAction="never" />
    <item
        android:id="@+id/action_readIgreja"
        android:orderInCategory="101"
        android:title="@string/igreja"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lideres"
        android:orderInCategory="102"
        android:title="@string/lideres"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_addLider"
        android:orderInCategory="103"
        android:title="@string/adiciona_l_der"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Login"
        android:orderInCategory="104"
        android:title="@string/action_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_Sair"
        android:orderInCategory="105"
        android:title="@string/action_Sair"
        app:showAsAction="never" />
    <item
        android:id="@+id/Desconectar"
        android:orderInCategory="106"
        android:title="@string/desconectar">
        <menu>
            <item
                android:id="@+id/action_Logout"
                android:orderInCategory="107"
                android:title="@string/action_logout"
                app:showAsAction="never" />
        </menu>

    </item>
</menu>
