<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_Save_addIntercessao"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel_addIntercessao"
        android:orderInCategory="101"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/action_cancel"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>