<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_baseline_save_24"
        android:orderInCategory="100"
        android:title="@string/salvar"
        app:showAsAction="ifRoom"
        app:tint="#FFFFFF" />
    <item
        android:id="@+id/action_Edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:orderInCategory="101"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:orderInCategory="102"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom" />
</menu>